--- a/.gitmodules
+++ b/.gitmodules
@@ -1,16 +1,16 @@
 [submodule "u-boot-xlnx"]
 	path = u-boot-xlnx
-	url = https://github.com/m1nl/ebaz4205-u-boot-xlnx.git
-	branch = main
+	url = https://github.com/m1nl/u-boot-xlnx.git
+	branch = ebaz4205
 [submodule "buildroot"]
 	path = buildroot
 	url = https://github.com/m1nl/buildroot.git
-	branch = main
+	branch = ebaz4205
 [submodule "hdl"]
 	path = hdl
 	url = https://github.com/m1nl/analogdevicesinc-hdl.git
 	branch = ebaz4205
 [submodule "linux"]
 	path = linux
-	url = https://github.com/m1nl/ebaz4205-linux.git
+	url = https://github.com/m1nl/analogdevicesinc-linux.git
 	branch = ebaz4205
